fix: add more padding on mobile

--- a/ui-components/src/headers/SiteHeader.scss
+++ b/ui-components/src/headers/SiteHeader.scss
@@ -118,7 +118,12 @@
           align-items: center;
           justify-content: center;
 
+          .logo-content {
+            @apply p-1;
+          }
+
           .navbar-image-only-container {
+            @apply p-0;
             width: 100%;
             height: 100%;
             // 75px - .5rem of padding from the container around it
